# ShipperManagementSystem

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json  pyproject.toml  requirements.txt
frontend/public/: index.html
frontend/src/: App.js  index.html
frontend/src/components/: Dashboard.js  Deposits.js  listItems.js
frontend/src/pages/: Shippers.js  Vessels.js
frontend/src/services/: ConsignmentService.js  LineService.js  ShipperService.js
shipper/: filters.py  models.py  views.py
sms/: manage.py  requirements.txt  settings.py
sms/frontend/: karma.conf.js  package-lock.json  package.json
sms/frontend/e2e/src/: app.e2e-spec.ts
sms/frontend/public/: index.html
sms/frontend/src/: App.js
sms/frontend/src/components/: ConsignTable.js  Dashboard.js  Loader.js  Navbar.js  listItems.js
sms/frontend/src/controllers/: ConsignmentControlller.js
sms/frontend/src/pages/: Lines.js
sms/frontend/src/services/: ConsignmentService.js  VesselService.js
sms/shipper/: models.py  serializers.py  views.py
sms/shipper/migrations/: 0001_initial.py  0002_auto_20210304_1818.py
sms/sms/: settings.py  urls.py
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/app/model/: consignment.spec.ts  consignment.ts  job.ts  vessel.spec.ts  vessel.ts
src/app/services/: consignment.service.ts  data.service.ts  job.service.ts
src/assets/js/: script.js  zoom-image.js  zoom-main.js
static/: .keep
(+15 files in other folders)
