[tool.poetry]
name = "sms-flask"
version = "0.1.0"
description = ""
authors = ["okpoti2 <okpoti2@gmail.com>"]
readme = "README.md"
packages = [{include = "sms_flask"}]

[tool.poetry.dependencies]
python = "^3.8"
safety = "^2.3.5"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^0.991"
safety = "^2.3.5"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
